No se mostraba la arquitectura y tipo de software

--- a/app/views/programs/_form.html.erb
+++ b/app/views/programs/_form.html.erb
@@ -30,13 +30,13 @@
 
   <div class="form-group">
     <label for="text">Arquitectura:</label>
-    <%= f.select(:plataforma , [['x32', 'x32'],
+    <%= f.select(:arquitectura , [['x32', 'x32'],
                           ['x64', 'x64']] )%>
   </div>
 
   <div class="form-group">
     <label for="text">Tipo:</label>
-    <%= f.select(:plataforma , [['Software Libre', 'Software Libre'],
+    <%= f.select(:tipo , [['Software Libre', 'Software Libre'],
                           ['Software Propietario', 'Software Propietario']] )%>
   </div>
 
